--- a/src/pages/FormTest/index.less
+++ b/src/pages/FormTest/index.less
@@ -1,2 +1,27 @@
 .form-test {
+  flex: 1;
+  overflow: auto;
+
+  &__title {
+    font-size: 14px;
+  }
+  &__explore {
+    margin-top: 6px;
+    font-size: 12px;
+    color: gray;
+  }
+  &__content {
+    margin-top: 12px;
+  }
+  &__demo {
+    background: #f5f5f5;
+    height: 190px;
+    // margin: 24px;
+    padding: 24px;
+    border-radius: 4px;
+  }
+  &__number {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+  }
 }
