--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -9,10 +9,9 @@
   &__img {
     float: left;
     margin-top: 5.5px;
-    color: var(--ant-primary-color);
   }
   &__text {
-    color: var(--ant-primary-color);
+    color: white;
     margin-left: 10px;
     font-weight: 700;
     font-size: 20px;
